--- a/image_preprocessing_neural_networkk/1_image_preprocessing.ipynb
+++ b/image_preprocessing_neural_networkk/1_image_preprocessing.ipynb
@@ -207,70 +207,27 @@
     "# Evaluate the model\n",
     "model.evaluate(test_data, test_labels)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# One dimensional convoltions \n",
-    "\n",
-    "A convolution of an one-dimensional array with a kernel comprises of taking the kernel, sliding it along the array, multiplying it with the items in the array that overlap with the kernel in that location and summing this product.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Multiply each window in the input array with the kernel and sum the multiplied result and allocate the result into the correct entry in the output array (conv).\n",
-    "\n",
-    "array = np.array([1, 0, 1, 0, 1, 0, 1, 0, 1, 0])\n",
-    "# kernel includes the feature we looking for. looking for a big change negative change and a slighter positive change\n",
-    "kernel = np.array([1, -1, 0])\n",
-    "conv = np.array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])\n",
-    "\n",
-    "# Output array\n",
-    "# 3 because of the kernal length\n",
-    "for ii in range(8):\n",
-    "    conv[ii] = (kernel * array[ii:ii+3]).sum()\n",
-    "\n",
-    "# Print conv\n",
-    "print(conv)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Image convolution\n",
-    "The convolution of an image with a kernel summarizes a part of the image as the sum of the multiplication of that part of the image with the kernel. In this exercise, you will write the code that executes a convolution of an image with a kernel using Numpy. Given a black and white image that is stored in the variable im, write the operations inside the loop that would execute the convolution with the provided kernel."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Select the right window from the image in each iteration and multiply this part of the image with the kerne\n",
-    "kernel = np.array([[0, 1, 0], [1, 1, 1], [0, 1, 0]])\n",
-    "result = np.zeros(im.shape)\n",
-    "\n",
-    "# Output array\n",
-    "# Sum the result and allocate the sum to the correct entry in the output array (results).\n",
-    "for ii in range(im.shape[0] - 3):\n",
-    "    for jj in range(im.shape[1] - 3):\n",
-    "        result[ii, jj] = (im[ii:ii+3, jj:jj+3] * kernel).sum()\n",
-    "\n",
-    "# Print result\n",
-    "print(result)"
-   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "08bcf114b6799a788c3e4c5366ee28d230c9527aecb5fe8828812464fcb419b7"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 64-bit (windows store)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
