--- a/image_preprocessing_neural_networkk/2_convolutions.ipynb
+++ b/image_preprocessing_neural_networkk/2_convolutions.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Conv2D, Flatten"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
